@@ -14,6 +14,13 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Remove autohook inserted in items, and use was_destroyed() to check item's validity.
+ plugins/cfpython/include/cfpython_object.h: keep item's count, change check macros.
+ plugins/cfpython/cfpython_map.c: fix wrong EXISTCHECK_INT to MAPEXISTCHECK_INT.
+ plugins/cfpython/cfpython_object.c: remove autohook stuff, use item's count.
+ plugins/cfpython/cfpython.c: remove autohook handling.
+Nicolas Weeger 2008-03-29
+
 Tweak documentation generation.
  doc/playbook/Makefile.am: factorize code to make it easy to generate PDFs,
   fix many pic issues.
